apps/tests/test-iscsi.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: test-iscsi
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: test-iscsi
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: test-mount
          mountPath: /test
  volumes:
    - name: test-mount
      persistentVolumeClaim:
        claimName: test-iscsi
