apps/tests/test-ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  selector:
    matchLabels:
      name: ollama
  replicas: 1
  template:
    metadata:
      labels:
        name: ollama
    spec:
      runtimeClassName: nvidia
      containers:
        - name: ollama
          image: ollama/ollama:latest
          resources:
            limits:
              nvidia.com/gpu: 1
          ports:
            - name: http
              containerPort: 11434
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  selector:
    name: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: ollama.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
  tls:
    - hosts:
        - ollama.homelab.leehosanganson.dev
      secretName: ollama-tls
---
